--- a/general.tex
+++ b/general.tex
@@ -281,7 +281,7 @@ $z = x + iy \iff z = r(\cos \gamma + i \sin \gamma) \overset{Euler}{=} z = r e^{
     $\frac{1}{x}$                                                    & $\ln(ax)$               & $x \ln(ax) - x$\\
     $\frac{1}{x + a}$                                                & $\ln(x + a)$            & $(x + a) \ln(x + a) + x$\\
     $ae^{ax}$                                                        & $e^{ax}$                & $\frac{1}{a} e^{ax}$\\
-    $-\frac{1}{x^2}$                                                 & $\frac{1}{x}$           & $\ln(|x|)$\\
+    $\frac{-a}{x^2}$                                                 & $\frac{a}{x}$           & $a\ln(|x|)$\\
     $\ln(a)b a^{b x}$                                                & $a^{bx}$                & $\frac{a^{bx}}{\ln(a)b}$\\
     $\frac{1}{2\sqrt{x}}$                                            & $\sqrt{x}$              & $\frac{2}{3}x^{3/2}$\\
     $\frac{1}{x\ln(a)}$                                              & $\log_a(x)$             & $\frac{x(\ln(x)-1)}{\ln(a)}$\\
