--- a/intInRn.tex
+++ b/intInRn.tex
@@ -360,7 +360,7 @@ Given curve $\gamma: [a,  b] \to \R^2$ which is closed and simple.
 Goal, find the area of $X$ which is enclosed by the curve.
 
 \begin{compactenum}
-    \item Select $f = (0, x)$ or $f = (y, 0)$ for which $\text{curl }f = 1$.
+\item Select $f = (0, x)$ or $f = (-y, 0)$ or anything else with $\text{curl }f = 1$.
     \item $\text{Area}(X) = \int_{\partial X} f(x) \mathrm{d}x = \int\int_X 1 \mathrm{d}x\mathrm{y}$.
 \end{compactenum}
 
