--- a/main.tex
+++ b/main.tex
@@ -68,8 +68,9 @@
 \begin{multicols*}{3}
     \input{general.tex}
     \clearpage
-    \input{./diffInRn.tex}
+    \input{./ode.tex}
     \clearpage
+    \input{./diffInRn.tex}
     \input{./intInRn.tex}
 \end{multicols*}
 \end{document}
